--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -28,7 +28,7 @@ shadow = true;
 shadow-radius = 20;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = 0.5
+shadow-opacity = 0.7
 
 # The left offset for shadows, in pixels. (defaults to -15)
 shadow-offset-x = -15;
@@ -73,6 +73,7 @@ shadow-offset-y = -15;
 #
 # shadow-exclude = []
 shadow-exclude = [
+    "!focused",
     "name       = 'Notification'",
     "name       = 'Polybar tray window'",
     "class_g    ?= 'Notify-osd'",
@@ -154,7 +155,7 @@ inactive-opacity-override = false;
 active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-inactive-dim = 0.05
+# inactive-dim = 0.05
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
@@ -223,7 +224,7 @@ blur: {
     # requires: https://github.com/ibhagwan/picom
     method = "dual_kawase";
     #method = "kernel";
-    strength = 8;
+    strength = 4;
     # deviation = 1.0;
     # kernel = "11x11gaussian";
     background = true;
@@ -234,6 +235,7 @@ blur: {
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
+    "class_g = 'Polybar'",
     "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -250,12 +252,11 @@ blur-background-exclude = [
 #
 experimental-backends = false;
 backend = "glx";
-#backend = "xrender";
-
+# backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true
+vsync = false
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -466,7 +467,7 @@ wintypes:
         corner-radius = 0;
         round-borders = 0;
     };
-    dock = { shadow = false; }
+    dock = { shadow = false; corner-radius = 0; }
     dnd = { shadow = false; }
     popup_menu = {
         opacity = 0.8;
