--- a/config/i3/config
+++ b/config/i3/config
@@ -16,6 +16,7 @@ set $FM         thunar
 set $BROWSER    firefox
 set $TERMINAL_A alacritty
 set $TERMINAL_B kitty
+set $MUSIC      mpdterm
 set $AUTOSTART  relaunch i3-autostart
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -53,10 +54,13 @@ bindsym $mod+d              exec rofi -show drun
 bindsym $mod+x              exec rofi -show run
 
 # start file manager
-bindsym $mod+shift+f        exec $FM
+bindsym $mod+shift+f        exec --no-startup-id $FM
 
 # start browser
-bindsym $mod+shift+w        exec $BROWSER
+bindsym $mod+shift+w        exec --no-startup-id $BROWSER
+
+# start music player
+bindsym $mod+shift+m        exec --no-startup-id $MUSIC
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -159,7 +163,7 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 bindsym $mod+Shift+minus move scratchpad
 
 # show the first scratchpad window
-bindsym $mod+minus scratchpad show
+bindsym $mod+minus [class=.] scratchpad show
 
 # media controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
@@ -221,8 +225,8 @@ bindsym $mod+r mode "resize"
 #}
 
 # gaps
-gaps inner 8
-gaps outer 4
+gaps inner 6
+gaps outer 3
 
 # ref card
 bindsym $mod+Escape exec --no-startup-id xdg-open https://i3wm.org/docs/refcard.html
@@ -238,10 +242,14 @@ for_window  [class="(?i)firefox" \
             instance="(?i)Toolkit" \
             title="(?i)Picture-in-Picture"] sticky enable
 
+for_window  [class="(?i)Alacritty" \
+            instance="(?i)music"]           floating enable
+
 no_focus    [class="feh-popup"]
 
-client.focused      #a98d6b #a98d6b #a98d6b #a98d6b
-client.unfocused    #000000 #000000 #000000 #000000
+# client.focused      #a98d6b #a98d6b #a98d6b #a98d6b
+# client.unfocused    #000000 #000000 #000000 #000000
 
 # autostart
+exec --no-startup-id autotiling
 exec_always --no-startup-id $AUTOSTART
