--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -25,7 +25,7 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 20;
+shadow-radius = 15;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 shadow-opacity = 0.7
@@ -73,7 +73,7 @@ shadow-offset-y = -15;
 #
 # shadow-exclude = []
 shadow-exclude = [
-    "!focused",
+    "!focused   && class_g != 'Rofi'",
     "name       = 'Notification'",
     "name       = 'Polybar tray window'",
     "class_g    ?= 'Notify-osd'",
@@ -235,7 +235,7 @@ blur: {
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
-    "class_g = 'Polybar'",
+    # "class_g = 'Polybar'",
     "_GTK_FRAME_EXTENTS@:c"
 ];
 
