--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -49,7 +49,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 30
+height = 24
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -524,7 +524,7 @@ type = internal/date
 
 interval = 1.0
 
-time = %I:%M
+time = %H:%M
 time-alt = %B %d, %Y
 
 format = <label>
