--- a/xorg/xorg.conf.d/30-touchpad.conf
+++ b/xorg/xorg.conf.d/30-touchpad.conf
@@ -5,4 +5,5 @@ Section "InputClass"
 	Option "Tapping" "on"
 	Option "ClickMethod" "clickfinger"
 	Option "NaturalScrolling" "true"
+	Option "AccelSpeed" "0.5"
 EndSection
