Updated polybar config, resume/suspend scripts

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -395,10 +395,10 @@ fuzzy-match = true
 ;   %output%
 ; Default: %icon%  %name%
 label-unfocused = %index%
-label-unfocused-foreground = #666666
+label-unfocused-foreground = #bbbbbb
 label-unfocused-padding = 2
 label-visible = %index%
-label-visible-foreground = #666666
+label-visible-foreground = #bbbbbb
 label-visible-padding = 2
 label-focused = %index%
 label-focused-foreground = #ffffff
